@@ -11,6 +11,8 @@ apport (0.102) UNRELEASED; urgency=low
   * debian/apport.init: Do not stop apport in any runlevel (LSB header).
   * apport/ui.py, run_crash(): Catch zlib.error on invalidly compressed core
     dumps. (LP: #176977)
+  * apport/ui.py: Give a meaningful error message instead of crashing if the
+    package for a crash report is not installed any more. (LP: #149739)
 
   [ Daniel Hahler ]
   * .crash file integration for KDE3 (LP: #177055)
@@ -19,7 +21,7 @@ apport (0.102) UNRELEASED; urgency=low
   * Fixed minor warnings/errors from desktop-file-validate in
     gtk/apport-gtk-mime.desktop.in and qt4/apport-qt.desktop.in (LP: #146957)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Feb 2008 14:40:40 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Feb 2008 15:37:01 +0100
 
 apport (0.101) hardy; urgency=low
 
